[package]
name = "expenses-divider"
version = "0.1.0"
authors = ["Manish Roy <manish.11612939@lpu.in>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"


[package.metadata.bundle]
name = "Expenses Divider"
identifier = "io.github.mv3n0m.expenses-divider"
description = "Divides expenses allowances from the income."
# icon = ["./icon.png", "./icon@2x.png"]